--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ language: objective-c
 
 before_install: 
 - brew update
-- brew upgrade xctool
+- if brew outdated --quiet | grep -qx xctool; then brew upgrade xctool; fi
 
 script: 
 - xctool -project FDWaveformView.xcodeproj -scheme FDWaveformView -sdk iphonesimulator7.0 ONLY_ACTIVE_ARCH=NO clean build test 
