--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,6 @@ language: objective-c
 # before_install:
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
-install:
-- gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
-- set -o pipefail && xcodebuild test -workspace Example/FDWaveformView.xcworkspace -scheme FDWaveformView-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
+- xctool -project FDWaveformView.xcodeproj -scheme FDWaveformView -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO clean build test 
 - pod lib lint --quick
