Added quality checker

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,3 +30,6 @@ script:
   - if [ $POD_LINT == "YES" ]; then
       pod lib lint;
     fi
+
+  # Test Cocoapods quality scores are met
+  - ruby Tests/CheckCocoaPodsQualityIndexes.rb
