--- a/.travis.yml
+++ b/.travis.yml
@@ -1,46 +1,18 @@
-language: objective-c
-osx_image: xcode8.3
+language: swift
+osx_image: xcode11.2
 env:
   global:
-  - LC_CTYPE=en_US.UTF-8
-  - LANG=en_US.UTF-8
-  - WORKSPACE=FDWaveformView.xcworkspace
-  - IOS_FRAMEWORK_SCHEME="FDWaveformView"
-  - EXAMPLE_SCHEME="iOS Example"
+    - LC_CTYPE=en_US.UTF-8
+    - LANG=en_US.UTF-8
+    - EXAMPLE_SCHEME="iOS Example"
+    - EXAMPLE_SCHEME="iOS Example"
+    - EXAMPLE_WORKSPACE="iOS Example/iOS Example.xcworkspace"
+    - IOS_FRAMEWORK_SCHEME="FDWaveformView"
   matrix:
-    - DESTINATION="OS=10.3,name=iPhone 7 Plus"     SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="YES"
-before_install:
-  - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
+    - DESTINATION="OS=13.2,name=iPhone 8 Plus"
+    - RUN_TESTS="YES"
+    - BUILD_EXAMPLE="YES"
+    - POD_LINT="NO"
+    - POD_QUALITY_CHECK="NO"
 script:
-  - set -o pipefail
-  - xcodebuild -version
-  - xcodebuild -showsdks
-#  - xcodebuild -list
-#  - xcodebuild -workspace "$WORKSPACE" -list
-
-  # Build Framework in Debug and Run Tests if specified
-  - if [ $RUN_TESTS == "YES" ]; then
-      xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
-    else
-      xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty;
-    fi
-
-  # Build Framework in Release and Run Tests if specified
-  - if [ $RUN_TESTS == "YES" ]; then
-      xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
-    else
-      xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
-    fi
-
-  # Build Example in Debug if specified
-  - if [ $BUILD_EXAMPLE == "YES" ]; then
-      xcodebuild -workspace "$WORKSPACE" -scheme "$EXAMPLE_SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty;
-    fi
-
-  # Run `pod lib lint` if specified
-  - if [ $POD_LINT == "YES" ]; then
-      pod lib lint;
-    fi
-
-  # Test Cocoapods quality scores are met
-  - ruby Tests/CheckCocoaPodsQualityIndexes.rb
+  - Scripts/travis-ci.sh
