--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ env:
   global:
     - LC_CTYPE=en_US.UTF-8
     - LANG=en_US.UTF-8
-    - EXAMPLE_SCHEME="iOS Example"
-    - EXAMPLE_SCHEME="iOS Example"
-    - EXAMPLE_WORKSPACE="iOS Example/iOS Example.xcworkspace"
-    - IOS_FRAMEWORK_SCHEME="FDWaveformView"
+    - RUN_TESTS="YES"
+    - BUILD_EXAMPLE="YES"
+    - POD_LINT="YES"
+    - POD_QUALITY_CHECK="NO"
   matrix:
-    - DESTINATION="OS=13.2,name=iPhone 8 Plus" RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO" POD_QUALITY_CHECK="NO"
+    - SIMULATOR_NAME="iPhone 8" iOS_SDK="iphonesimulator13.2"
 script:
   - Scripts/travis-ci.sh
