Added unversioned TeamID infrastructure. This is described in detail in the file "Shared.xcconfig".

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ FDWaveformView.framework.zip
 
 # Swift project manager
 .swiftpm
+
+# User-specific xcconfig files
+iOS Example/Xcode-config/DEVELOPMENT_TEAM.xcconfig
