--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,32 +1,37 @@
 ---
-name: Test
+name: CI
 
 on:
   push:
-    branches: [main, master]
+    branches: [main]
   pull_request:
-    branches: [main, master]
+    branches: [main]
 
 jobs:
   test:
-    runs-on: macos-14
+    name: Build and Test
+    runs-on: macos-15
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Xcode version
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '15.4'
+      - name: Select Xcode
+        run: sudo xcode-select -s /Applications/Xcode_16.4.app
 
-      - name: Build and Test for iOS
+      - name: Show build environment
         run: |
-          # Build for iPhone Simulator using xcodebuild with Swift package
-          xcodebuild -scheme FDWaveformView \
-            -destination "platform=iOS Simulator,name=iPhone 15,OS=17.5" \
-            clean build
-          
-          # Run tests on iPhone Simulator  
-          xcodebuild -scheme FDWaveformView \
-            -destination "platform=iOS Simulator,name=iPhone 15,OS=17.5" \
-            test
+          xcodebuild -version
+          xcrun swift --version
+          xcrun simctl list devices available | grep 'iPhone 16 '
+
+      - name: Build
+        run: |
+          xcodebuild build \
+            -scheme FDWaveformView \
+            -destination 'platform=iOS Simulator,name=iPhone 16,OS=18.5'
+
+      - name: Test
+        run: |
+          xcodebuild test \
+            -scheme FDWaveformView \
+            -destination 'platform=iOS Simulator,name=iPhone 16,OS=18.5'
